add new email signature and vlogin alias

--- a/conf/boost_signature.html
+++ b/conf/boost_signature.html
@@ -1,1 +1,45 @@
-<table style="width: 520px; border-collapse: collapse; border-top: 4px solid #442575;" width="500" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td style="background-color:#e5e5e5; padding-left: 20px; padding-right: 20px; padding-top: 10px; padding-bottom: 10px;" width="200" bgcolor="#e5e5e5"> <table style="border-collapse: collapse;" width="160" height="160" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td style="text-align: center; font-family: 'Courier', sans-serif;" align="center"> <img src="http://boost-signature-generator.herokuapp.com/uploads/Paul_Mesnilgrente" width="160" height="160"> </td> </tr> </tbody></table> </td> <td style="background-color:#e5e5e5; padding-left: 5px; padding-right: 5px; padding-top: 10px; padding-bottom: 10px;" bgcolor="#e5e5e5"> <table style="border-collapse: collapse;" width="260" height="160" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td style="text-align: left; font-family: 'Courier', sans-serif;" valign="top"> <span style="font-size: 20px; font-weight: bold; line-height: 36px; color: #442575;">Paul Mesnilgrente</span> </td> </tr> <tr> <td style="text-align: left; font-family: 'Tahoma', sans-serif; line-height: 24px; font-size: 14px; letter-spacing: 1px;" valign="top"> Developer <br> <a href="#" style="text-decoration: underline; color: #cd2d87;">paul.mesnilgrente@boost.co.nz</a> <br> </td> </tr> <tr> <td style="padding-top: 10px;" valign="top"> <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td> <a href="#"><img src="http://boost-signature-generator.herokuapp.com/images/boost.png" width="auto" height="40"></a> </td> </tr> <tr> <td style="padding-left: 5px; text-align: left; font-family: 'Tahoma', sans-serif;line-height: 16px; font-size: 10px; color: #8c8c8c;"> Level 5 57-59 Courtenay Place PO Box 11 504 <br>Wellington New Zealand <a href="#" style="text-decoration: underline; color: #cd2d87;">+6398 765 7652</a> </td> </tr> </tbody></table> </td> </tr> </tbody></table> </td> <td style="background-color:#e5e5e5; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" bgcolor="#e5e5e5"> <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td style="color: #fff;" bgcolor="#ccc"> <a href="#" target="_blank" style="text-decoration: none;"><img src="http://boost-signature-generator.herokuapp.com/images/facebook.jpg" style="border: none; display: block;" width="50" height="50"></a> </td> </tr> <tr> <td style="color: #fff;" bgcolor="#ccc"> <a href="#" target="_blank" style="text-decoration: none;"><img src="http://boost-signature-generator.herokuapp.com/images/linkedin.jpg" style="border: none; display: block;" width="50" height="50"></a> </td> </tr> <tr> <td style="color: #fff;" bgcolor="#ccc"> <a href="#" target="_blank" style="text-decoration: none;"><img src="http://boost-signature-generator.herokuapp.com/images/twitter.jpg" style="border: none; display: block;" width="50" height="50"></a> </td> </tr> <tr> <td style="color: #fff;" bgcolor="#ccc"> <a href="#" target="_blank" style="text-decoration: none;"><img src="http://boost-signature-generator.herokuapp.com/images/skype.jpg" style="border: none; display: block;" width="50" height="50"></a> </td> </tr> </tbody></table> </td> </tr> </tbody></table>
+<table style="margin-top: 50px; width: 520px; border-collapse: collapse; border-top: 1px dotted #442575;" width="500" cellspacing="0" cellpadding="0" border="0">
+  <tbody><tr>
+    <td style="padding-left: 0; padding-right: 15px; padding-top: 15px; padding-bottom: 10px;" width="150">
+      <table style="border-collapse: collapse;" width="160" height="160" cellspacing="0" cellpadding="0" border="0">
+        <tbody><tr>
+          <td style="text-align: center; font-family: 'Arial', sans-serif;" align="center">
+            <img src="https://boost-email-signature.s3.ap-southeast-2.amazonaws.com/5EWtgJrpBjzUBvZthmCobfmd" style="border: none; display: block;" width="160" height="160">
+          </td>
+        </tr>
+      </tbody></table>
+    </td>
+    <td style="padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 0px;" valign="top">
+      <table style="border-collapse: collapse;" width="260" height="160" cellspacing="0" cellpadding="0" border="0">
+        <tbody><tr>
+          <td style="text-align: left; font-family: 'Arial', sans-serif; padding-top: 5px;" valign="top">
+            <span style="font-size: 20px; font-weight: bold; line-height: 36px; color: #442575;">Paul Mesnilgrente</span>
+          </td>
+        </tr>
+        <tr>
+          <td style="text-align: left; font-family: 'Arial', sans-serif; line-height: 24px; font-size: 14px; letter-spacing: 1px;" valign="top">
+            Developer <br>
+            <a href="mailto:paul.mesnilgrente@boost.co.nz" style="text-decoration: underline; color: #cd2d87;">paul.mesnilgrente@boost.co.nz</a> <br>
+          </td>
+        </tr>
+        <tr>
+          <td style="padding-top: 10px;" valign="top">
+            <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+              <tbody><tr>
+                <td>
+                  <a href="https://www.boost.co.nz/"><img src="https://boost-email-signature.s3-ap-southeast-2.amazonaws.com/boost.png" width="auto" height="40"></a>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding-left: 5px; text-align: left; font-family: 'Arial', sans-serif;line-height: 16px; font-size: 10px; color: #8c8c8c;">
+                  Level 5 57-59 Courtenay Place PO Box 11 504 <br>Wellington New Zealand
+                  <a href="#" style="text-decoration: underline; color: #cd2d87;">+6398 765 7652</a>
+                </td>
+              </tr>
+            </tbody></table>
+          </td>
+        </tr>
+      </tbody></table>
+    </td>
+  </tr>
+</tbody></table>
