beautified the boost_signature.html for better readability

--- a/conf/boost_signature.html
+++ b/conf/boost_signature.html
@@ -1,45 +1,53 @@
 <table style="margin-top: 50px; width: 520px; border-collapse: collapse; border-top: 1px dotted #442575;" width="500" cellspacing="0" cellpadding="0" border="0">
-  <tbody><tr>
-    <td style="padding-left: 0; padding-right: 15px; padding-top: 15px; padding-bottom: 10px;" width="150">
-      <table style="border-collapse: collapse;" width="160" height="160" cellspacing="0" cellpadding="0" border="0">
-        <tbody><tr>
-          <td style="text-align: center; font-family: 'Arial', sans-serif;" align="center">
-            <img src="https://boost-email-signature.s3.ap-southeast-2.amazonaws.com/5EWtgJrpBjzUBvZthmCobfmd" style="border: none; display: block;" width="160" height="160">
-          </td>
-        </tr>
-      </tbody></table>
-    </td>
-    <td style="padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 0px;" valign="top">
-      <table style="border-collapse: collapse;" width="260" height="160" cellspacing="0" cellpadding="0" border="0">
-        <tbody><tr>
-          <td style="text-align: left; font-family: 'Arial', sans-serif; padding-top: 5px;" valign="top">
-            <span style="font-size: 20px; font-weight: bold; line-height: 36px; color: #442575;">Paul Mesnilgrente</span>
-          </td>
-        </tr>
-        <tr>
-          <td style="text-align: left; font-family: 'Arial', sans-serif; line-height: 24px; font-size: 14px; letter-spacing: 1px;" valign="top">
-            Developer <br>
-            <a href="mailto:paul.mesnilgrente@boost.co.nz" style="text-decoration: underline; color: #cd2d87;">paul.mesnilgrente@boost.co.nz</a> <br>
-          </td>
-        </tr>
-        <tr>
-          <td style="padding-top: 10px;" valign="top">
-            <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
-              <tbody><tr>
-                <td>
-                  <a href="https://www.boost.co.nz/"><img src="https://boost-email-signature.s3-ap-southeast-2.amazonaws.com/boost.png" width="auto" height="40"></a>
-                </td>
-              </tr>
-              <tr>
-                <td style="padding-left: 5px; text-align: left; font-family: 'Arial', sans-serif;line-height: 16px; font-size: 10px; color: #8c8c8c;">
-                  Level 5 57-59 Courtenay Place PO Box 11 504 <br>Wellington New Zealand
-                  <a href="#" style="text-decoration: underline; color: #cd2d87;">+6398 765 7652</a>
-                </td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
-</tbody></table>
+  <tbody>
+    <tr>
+      <td style="padding-left: 0; padding-right: 15px; padding-top: 15px; padding-bottom: 10px;" width="150">
+        <table style="border-collapse: collapse;" width="160" height="160" cellspacing="0" cellpadding="0" border="0">
+          <tbody>
+            <tr>
+              <td style="text-align: center; font-family: 'Arial', sans-serif;" align="center">
+                <img src="https://boost-email-signature.s3.ap-southeast-2.amazonaws.com/5EWtgJrpBjzUBvZthmCobfmd" style="border: none; display: block;" width="160" height="160">
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td style="padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 0px;" valign="top">
+        <table style="border-collapse: collapse;" width="260" height="160" cellspacing="0" cellpadding="0" border="0">
+          <tbody>
+            <tr>
+              <td style="text-align: left; font-family: 'Arial', sans-serif; padding-top: 5px;" valign="top">
+                <span style="font-size: 20px; font-weight: bold; line-height: 36px; color: #442575;">Paul Mesnilgrente</span>
+              </td>
+            </tr>
+            <tr>
+              <td style="text-align: left; font-family: 'Arial', sans-serif; line-height: 24px; font-size: 14px; letter-spacing: 1px;" valign="top">
+                Developer <br>
+                <a href="mailto:paul.mesnilgrente@boost.co.nz" style="text-decoration: underline; color: #cd2d87;">paul.mesnilgrente@boost.co.nz</a> <br>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding-top: 10px;" valign="top">
+                <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+                  <tbody>
+                    <tr>
+                      <td>
+                        <a href="https://www.boost.co.nz/"><img src="https://boost-email-signature.s3-ap-southeast-2.amazonaws.com/boost.png" width="auto" height="40"></a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td style="padding-left: 5px; text-align: left; font-family: 'Arial', sans-serif;line-height: 16px; font-size: 10px; color: #8c8c8c;">
+                        Level 5 57-59 Courtenay Place PO Box 11 504 <br>Wellington New Zealand
+                        <a href="#" style="text-decoration: underline; color: #cd2d87;">+6398 765 7652</a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </tbody>
+</table>
